Fixed bug #76127

Per documentation, and consistent with other preg functions, we
should return false if an error occurred.